exports[`(.not).toHaveNonAuthoritativeInformationStatus > using axios > .not.toHaveNonAuthoritativeInformationStatus > fails when response have status code 203 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveNonAuthoritativeInformationStatus()</intensity>

Expected status code to not be 203 received:
  <red>203</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 203,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveNonAuthoritativeInformationStatus > using axios > .toHaveNonAuthoritativeInformationStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveNonAuthoritativeInformationStatus()</intensity>

Expected status code to be 203 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
